style(ui): fix secondary page spacing (#3406)

--- a/packages/ui/src/Layout/AppLayout/index.module.scss
+++ b/packages/ui/src/Layout/AppLayout/index.module.scss
@@ -54,7 +54,7 @@
     width: 640px;
     min-height: 640px;
     position: relative;
-    padding: _.unit(12)  _.unit(6);
+    padding: _.unit(6);
     border-radius: 16px;
     background: var(--color-bg-float);
     box-shadow: var(--color-shadow-2);
